[gd_scene load_steps=3 format=3 uid="uid://bconwktvchlwu"]

[ext_resource type="Texture2D" uid="uid://w0wkidm1rx7l" path="res://assets/skills/fireball32x32.png" id="1_dsnsl"]
[ext_resource type="Script" path="res://scenes/utilities/item_option.gd" id="1_sqtw0"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 180.0
offset_bottom = 50.0
color = Color(0.529067, 0.529067, 0.529067, 1)
script = ExtResource("1_sqtw0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_dsnsl")
expand_mode = 1

[node name="lbl_name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 86.0
offset_bottom = 25.0
text = "Name"

[node name="lbl_desc" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 166.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 6
text = "Description of item"
autowrap_mode = 3

[node name="lbl_level" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 171.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 12
text = "level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
